# position-management-system

./: .env.example  .gitignore  Anchor.toml  Cargo.toml  README.md
backend/: Cargo.toml  README.md
backend/migrations/: 001_initial.sql
backend/src/: db.rs  main.rs  margin_calculator.rs  models.rs  pnl_tracker.rs  position_manager.rs  position_monitor.rs  routes.rs  utils.rs
programs/position-management/src/: calculations.rs  error.rs  lib.rs  state.rs
programs/position-management/src/instructions/: close_position.rs  init_user.rs  mod.rs  modify_position.rs  open_position.rs
tests/: position-management.ts  position.spec.ts
ui/: app.py  requirements.txt
ui/pages/: 1_Open_Position.py  2_Active_Positions.py  3_Risk_Monitor.py  4_PnL_History.py
ui/utils/: __init__.py  api.py  websocket_client.py
