[package]
name = "position-management-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["ws", "macros"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "trace"] }
hyper = { version = "1.0", features = ["full"] }
tokio = { version = "1.35", features = ["full"] }
rand = "0.8"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "bigdecimal"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.0", features = ["serde", "v4"] }

# Decimal arithmetic
bigdecimal = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.0", features = ["serde-float"] }
num-traits = "0.2"

# Logging
log = "0.4"
env_logger = "0.10"
tracing = "0.1"
tracing-subscriber = "0.3"

# Async utilities
futures-util = "0.3"

# Configuration
dotenv = "0.15"

# WebSocket
futures = "0.3"
anyhow = "1.0"

# Solana/Anchor
anchor-client = "0.32.1"
anchor-lang = "0.32.1"
solana-sdk = "2.0"
